Commented out search bar, added welcome message to indicate user is logged in

--- a/views/main.pug
+++ b/views/main.pug
@@ -13,8 +13,9 @@ block content
         div.navbar_hamburger
             a(href="/logout")
                 img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
-        div.navbar_searchbar
-            img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
+        div
+            //- img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
+            h1= 'Welcome, ' + user.username
         div.navbar_theme_wrapper
             div.fruit_red
                 a(href="#" id="apple")
