Add logout title and changed color of welcome message

--- a/views/list.pug
+++ b/views/list.pug
@@ -10,9 +10,10 @@ append head
 
 block content
     div.navbar
-        div.navbar_hamburger
+        div.navbar_hamburger Logout
             a(href="/logout")
-                img(src="../images/hamburger-white.png" style="width: 40px; opacity: .80")
+                img(src="../images/hamburger-white.png" style="width: 30px; opacity: .80")
+               
         //- div.navbar_searchbar
         div
             //- img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
