--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,14 +1,18 @@
 html {
-    background-color: #68cdad;
-    padding: 0px;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 13px;
-    color: #4c4e54;
+  background-color: #68cdad;
+  padding: 0px;
+  font-family: "Quicksand", sans-serif;
+  font-size: 13px;
+  color: #4c4e54;
 }
 
 h2 {
-    font-family: 'Lilita One', cursive;
-    font-size: 50px;
-    font-weight: 300;
-    color: rgba(255,255,255,.65);
+  font-family: "Lilita One", cursive;
+  font-size: 50px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.65);
+}
+
+h1 {
+  color: white;
 }
