--- a/views/list.pug
+++ b/views/list.pug
@@ -81,9 +81,12 @@ block content
                     button(type="submit" class="saveButton") Save to List
                 if allTasks
                     div.tasks
-                        ol(id='task-list')
+                        ol
                             each task in allTasks
-                                li(class="task")=task.taskContent
-                                //- button(type="submit" class="saveButton edit") Edit
-                                //- button(type="submit" class="saveButton test") Test
+                                div.task-div
+                                    li(class="task")=task.taskContent
+                                    button(type="submit" class="saveButton open-edit") Edit
+                                div.edit-buttons-div
+                                    button(type="submit" class="saveButton") Delete
+                                    button(type="submit" class="saveButton close-edit-buttons-div") ^
 
