--- a/views/main.pug
+++ b/views/main.pug
@@ -33,6 +33,7 @@ block content
                 a(href="#" id="strawberry")
                     img(src="../images/strawberry.png" id="strawberry" class="navbar_themes")
 
+    //- FROM PROFILE.JS
     div.main
         div.main_left
             img(src="../images/default-logo.png" id="logo" class="logoSmall")
