--- a/views/list.pug
+++ b/views/list.pug
@@ -56,6 +56,7 @@ block content
                     button(type="submit" class="saveButton") Delete List
 
 
+        //- FROM LISTS.JS
         div.main_right
             div.main_right_topbox
                 div.inbox
