--- a/views/list.pug
+++ b/views/list.pug
@@ -11,7 +11,7 @@ append head
 block content
     div.navbar
         div.navbar_hamburger Logout
-            a(href="/logout")
+            a(href="users/logout")
                 img(src="../images/hamburger-white.png" style="width: 30px; opacity: .80")
                
         //- div.navbar_searchbar
