--- a/views/main.pug
+++ b/views/main.pug
@@ -11,7 +11,7 @@ append head
 block content
     div.navbar
         div.navbar_hamburger Logout
-            a(href="/logout")
+            a(href="users/logout")
                 img(src="../images/hamburger-white.png" style="width: 30px; opacity: .80")         
         div
             //- img(src="../images/search.png" class="search_glass" style="width: 35px; opacity: .80")
