--- a/views/list.pug
+++ b/views/list.pug
@@ -82,6 +82,6 @@ block content
                                     li(class="task")=task.taskContent
                                     button(type="submit" class="saveButton open-edit") Edit
                                 div.edit-buttons-div
-                                    button(type="submit" class="saveButton delete-button" value=task.id) Delete
-                                    button(type="submit" class="saveButton close-edit-buttons-div") ^
+                                    button(class="saveButton delete-button" value=task.id) Delete
+                                    button(class="saveButton close-edit-buttons-div") ^
 
