Edit buttons now do not display simultaneously

--- a/views/main.pug
+++ b/views/main.pug
@@ -79,7 +79,7 @@ block content
                             each task in allTasks
                                 div.task-div
                                     li(class="task")=task.taskContent
-                                    button(type="submit" class="saveButton open-edit") Edit
+                                    button(type="submit" class="saveButton open-edit") v
                                 div.edit-buttons-div
                                     button(class="saveButton delete-button" value=task.id) Delete
                                     button(class="saveButton close-edit-buttons-div") ^
