Change font-family to stop cursive from showing up for slit-second, then changing when page is loaded

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,13 +1,13 @@
 html {
   background-color: #68cdad;
   padding: 0px;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 13px;
   color: #4c4e54;
 }
 
 h2 {
-  font-family: "Lilita One", cursive;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 50px;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.65);
