--- a/views/main.pug
+++ b/views/main.pug
@@ -82,6 +82,6 @@ block content
                                 div(class='task-div' id=task.userListId)
                                     li(class="task")=task.taskContent
                                     button(type="submit" class="saveButton open-edit") v
-                                div.edit-buttons-div
+                                div(class='edit-buttons-div' style="display: none")
                                     button(class="saveButton delete-button" value=task.id) Delete
                                     button(class="saveButton close-edit-buttons-div") ^
