--- a/public/stylesheets/apple.css
+++ b/public/stylesheets/apple.css
@@ -22,7 +22,7 @@
   border: 0px;
   border-radius: 5px;
   padding: 10px;
-  font-family: "Lilita One", cursive;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
   color: #157afd;
   margin: 0px 0px 2px 0px;
@@ -48,7 +48,7 @@
   border: 0px;
   border-radius: 5px;
   padding: 10px;
-  font-family: "Lilita One", cursive;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 25px;
   color: hsl(214, 98%, 54%);
   margin-top: 10px;
@@ -62,7 +62,7 @@
 .dropdown {
   height: 50px;
   margin-top: 10px;
-  font-family: "Lilita One", cursive;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 30px;
   background-color: #9acd54;
   color: rgba(255, 255, 255, 0.75);
