--- a/public/stylesheets/login-signup.css
+++ b/public/stylesheets/login-signup.css
@@ -26,7 +26,7 @@ input {
   border: 0px;
   border-radius: 5px;
   padding: 10px;
-  font-family: "Lilita One", cursive;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 25px;
   color: white;
   margin-top: 15px;
