--- a/public/stylesheets/strawberry.css
+++ b/public/stylesheets/strawberry.css
@@ -38,7 +38,7 @@
 }
 
 .add_task_form {
-  width: 300px;
+  width: 96.5%;
   height: 50px;
   background-color: #c0ebe0;
   border: 0px;
@@ -49,6 +49,8 @@
   color: #157afd;
   margin-top: 10px;
   box-sizing: border-box;
+  margin-left: 25px;
+  margin-right: 35px;
 }
 
 .add_task_form:hover {
